# ishi-animations

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindGLUT.cmake
src/: bvh.l  main.cpp
src/core/: bsphere.cpp  color.cpp  color.h  common.h  math.cpp  matrix.cpp  matrix.h  point.cpp  shape.h  timer.cpp  vector.cpp  vector.h
src/demo/cpp/: joint.cpp  joint.h
src/demo/lex/: bvh.l
src/demo/yacc/: bvh.y
src/main/cpp/core/: bbox.cpp  bbox.h  bsphere.h  geometry.h  imaterial.cpp  imaterial.h  math.h  matrix.h  point.h  renderer.cpp  renderer.h  shape.cpp  timer.h  transform.cpp  transform.h  vector.h
src/test/cpp/core/: point_test.cpp  transform_test.cpp
test/: math_test.cpp  matrix_test.cpp  point_vector_test.cpp  transform_point_test.cpp  transform_vector_test.cpp  vector_test.cpp
